@@ -31,9 +31,6 @@ use ANSTE::Exceptions::InvalidType;
 use ANSTE::Virtualizer::Virtualizer;
 use ANSTE::Image::Commands;
 
-use File::Slurp;
-use POSIX;
-
 # Class: ScenarioDeployer
 #
 #   Deploys a given scenario creating its corresponding virtual machines
@@ -282,40 +279,25 @@ sub _autoUpdateBaseImages
 {
     my ($self) = @_;
 
-    my $config = ANSTE::Config->instance();
-    my $imgdir = $config->imagePath();
-
-    my $timestamp = strftime("%Y%m%d", localtime(time));
-
     # TODO: Update base images at the same time
     my $scenario = $self->{scenario};
     foreach my $host (@{$scenario->hosts()}) {
-        # Do not upgrade raw base images
-        unless ($host->baseImageType() eq 'raw') {
+        my $baseimage = $host->baseImage();
+        my $isRaw = $host->baseImageType() eq 'raw';
+        my $needsUpdate = $self->{virtualizer}->imageNeedsUpdate($baseimage->name());
+        if (not $isRaw and $needsUpdate) {
             my $hostname = $host->name();
-            my $baseimage = $host->baseImage();
-            my $name = $baseimage->name();
 
-            my $tsFile = "$imgdir/$name/last-update";
-            my $lastUpdateTS = read_file($tsFile, err_mode => 'quiet');
-            chomp($lastUpdateTS) if $lastUpdateTS;
+            ANSTE::info("[$hostname] Auto-updating base image...");
 
-            # Only update if not updated today
-            if(not $lastUpdateTS or ($lastUpdateTS lt $timestamp)) {
-                ANSTE::info("[$hostname] Auto-updating base image...");
+            my $cmd = new ANSTE::Image::Commands($baseimage);
 
-                my $cmd = new ANSTE::Image::Commands($baseimage);
-
-                if ($cmd->updateSystem()) {
-                    ANSTE::info("[$hostname] Auto-update completed successfully.");
-                } else {
-                    ANSTE::info("[$hostname] Could not update base image.");
-                }
-                $cmd->shutdown();
-
-                # Update timestamp
-                write_file($tsFile, $timestamp);
+            if ($cmd->updateSystem()) {
+                ANSTE::info("[$hostname] Auto-update completed successfully.");
+            } else {
+                ANSTE::info("[$hostname] Could not update base image.");
             }
+            $cmd->shutdown();
         }
     }
 }
